--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<!-- Icons -->
 		<a href="https://api.whatsapp.com/send?phone=5493518112198&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20OHMYWEB%202." class="float" target="_blank">
-			<i class="fa fa-whatsapp my-float"></i>
+			<i class="fab fa-whatsapp my-float"></i>
 			</a>
 
 
@@ -28,14 +28,14 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<div class="wrap">
-						<div id="feature">OH MY WEB
+					<div class="solutions">
+						<div id="feature">OHMY WEB
 						  <div id="type-field"><span class="type"></span><span class="line-blink"></span></div>
 						</div>
 						
 					  </div>
-					<ul class="actions">
-						<li><a href="#footer" class="button alt">Obtenerlo ahora!</a></li>
+					<ul class="actions toper">
+						<li><a href="#three" class="button alt">Tu sitio web a Medida!</a></li>
 					</ul>
 				</div>
 			</section>
@@ -48,7 +48,7 @@
 					</header>
 					<p>Trabajamos en digitalizar empresas y marcas, para que puedan verse reflejadas en internet con el prestigio que se merecen.</p>
 					<ul class="actions">
-						<li><a href="#footer" class="button alt">Obtenerlo ahora!</a></li>
+						<li><a href="#three" class="button alt">Descubre los Planes que tenemos para vos!</a></li>
 					</ul>
 				</div>
 			</section>
@@ -58,37 +58,37 @@
 				<div class="inner">
 					<article>
 						<div class="content">
-							<span class="icon fa-laptop"></span>
+							<span class="icon"> <i class="fas fa-store"></i></span>
 							<header>
-								<h3>Mision</h3>
+								<h3>Landing Page</h3>
 							</header>
-							<p>Nuestro plan de trabajo comienza con nuestra misión, que es perdurable y expresa nuestro propósito como Compañía. Sirve como el patrón sobre el cual ponderamos nuestras acciones y decisiones. Digitalizar al las empresas, Sumarle prestigio a nuestros clientes, Crear valor y dejar una huella positiva.</p>
+							<p>Pagina de aterrizaje , identidad de marca , Marketing,  sitio web donde tus clientes puedan encontrar la esencia de la marca.</p>
 							<ul class="actions">
-								<li><a href="#footer" class="button alt">Obtenerlo ahora!</a></li>
+								<li><a href="#footer" id="btnAterrizaje" class="button alt">Obtenerlo ahora! #PlanAterrizaje</a></li>
 							</ul>
 						</div>
 					</article>
 					<article>
 						<div class="content">
-							<span class="icon fa-diamond"></span>
+							<span class="icon"><i class="fas fa-calendar-alt"></i></span>
 							<header>
-								<h3>Visión</h3>
+								<h3>Web de Turnos</h3>
 							</header>
-							<p>Nuestra visión actúa como el marco de nuestro plan de trabajo y guía cada uno de los aspectos de nuestro negocio mediante la descripción de lo que necesitamos lograr para continuar alcanzando un crecimiento sostenible y de calidad.</p>
+							<p>Sitio web, donde los clientes puedan gestionar un turnos, los mismos estaran vinculados con tu agenda en google calendar.</p>
 							<ul class="actions">
-								<li><a href="#footer" class="button alt">Obtenerlo ahora!</a></li>
+								<li><a href="#footer" id="btnTurnos" class="button alt">Obtenerlo ahora! #PlanTurnos</a></li>
 							</ul>
 						</div>
 					</article>
 					<article>
 					<div class="content">
-							<span class="icon fa-laptop"></span>
+							<span class="icon"><i class="fas fa-shopping-cart"></i></span>
 							<header>
-								<h3>Valores</h3>
+								<h3>Tienda</h3>
 							</header>
-							<p>Nuestros valores actúan como una brújula que guía nuestras acciones y describe nuestro comportamiento en el mundo.</p>
+							<p>Sitio web donde publicas los articulos / servicios que vendes en tu negocio , el mismo esta vinculado a pagos por Mercadopago/Tarjetas de credito.</p>
 							<ul class="actions">
-								<li><a href="#footer" class="button alt">Obtenerlo ahora!</a></li>
+								<li><a href="#footer" id="btnTienda" class="button alt">Obtenerlo ahora! #PlanTienda</a></li>
 							</ul>
 						</div>
 					</article>
@@ -103,7 +103,7 @@
 					</header>
 					<form method="post" id="SendEMAIL" action="#">
 						<div class="field half first">
-							<label for="name">Name</label>
+							<label for="name">Nombre</label>
 							<input type="text" name="name" id="name" />
 						</div>
 						<div class="field half">
@@ -111,11 +111,11 @@
 							<input type="text" name="email" id="email" />
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
+							<label for="message">Mensaje</label>
 							<textarea name="message" id="message" rows="6"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="SendEMAIL" class="alt" /></li>
+							<li><input type="submit" value="Enviar" class="alt" /></li>
 							<div class="mdl-spinner mdl-js-spinner is-active"></div>
                				 <span class="success-help">Gracias nos pondremos en contacto en la brevedad!</span>
 						</ul>
@@ -132,6 +132,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/bonus.js"></script>
-
+			<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	</body>
 </html>
