--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">ohmyweb</a>
+
+					<a href="index.html" class="logo">
+						<!-- Logo White Version -->
+						<img src="images/logo.png" alt="">
+						<!-- Logo Dark Version -->
+						<img class="logo-dark" src="img/logo-dark.png" alt="">
+					  </a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 					</nav>
 				</div>
 			</header>
-			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+			<a href="#menu" class="nav-panel-toggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
 					<div class="solutions">
-						<div id="feature">OHMY WEB
+						<div id="feature">OHMYWEB
 						  <div id="type-field"><span class="type"></span><span class="line-blink"></span></div>
 						</div>
 						
