--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<section id="footer">
 				<div class="inner">
 					<header>
-						<h2>Contactanos</h2>
+						<h2>Escribime lo que tenes en mente.</h2>
 					</header>
 					<form method="post" id="SendEMAIL" action="#">
 						<div class="field half first">
@@ -126,7 +126,7 @@
 						</ul>
 					</form>
 					<div class="copyright">
-						Desing by <a href="https://ohmyweb.io/">OHMYWEB</a>.
+						Desing by <a href="https://ohmyweb.io/">OHMYWEB.</a>.
 					</div>
 				</div>
 			</section>
