commix fix mensajes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>OHMYWEB - Diseño y desarrollo web</title>
+		<title>OHMYWEB - Desarrollamos tu negocio en la web</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,9 +49,9 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>OHMYWEB Desing</h2>
+						<h2>OHMYWEB Desing.</h2>
 					</header>
-					<p>Trabajamos en digitalizar empresas y marcas, para que puedan verse reflejadas en internet con el prestigio que se merecen.</p>
+					<p>Equipo de profesionales IT que trabajamos en digitalizar empresas y marcas, brindandole un sitio web que les permita la presencia en internet para asi obtener nuevos clientes, un sitio web personalizado donde refleja el la esencia de la marca.</p>
 					<ul class="actions">
 						<li><a href="#three" class="button alt">Descubre los Planes que tenemos para vos!</a></li>
 					</ul>
@@ -67,7 +67,7 @@
 							<header>
 								<h3>Landing Page</h3>
 							</header>
-							<p>Pagina de aterrizaje , identidad de marca , Marketing,  sitio web donde tus clientes puedan encontrar la esencia de la marca.</p>
+							<p>Pagina de aterrizaje, Identidad de marca, Marketing, se denomina página de aterrizaje a una página web a la que una persona llega tras pulsar un enlace, estos clienten van a descubrir tu sitio web personalizado y puedan encontrar la esencia de la marca.</p>
 							<ul class="actions">
 								<li><a href="#footer" id="btnAterrizaje" class="button alt">Obtenerlo ahora! #PlanAterrizaje</a></li>
 							</ul>
@@ -79,7 +79,7 @@
 							<header>
 								<h3>Web de Turnos</h3>
 							</header>
-							<p>Sitio web, donde los clientes puedan gestionar un turnos, los mismos estaran vinculados con tu agenda en google calendar.</p>
+							<p>Sitio web, donde los clientes puedan gestionar turnos, los mismos estaran vinculados con tu agenda en google calendar, te ayuda en la gestion y respuesta inmediata a tus clientes.</p>
 							<ul class="actions">
 								<li><a href="#footer" id="btnTurnos" class="button alt">Obtenerlo ahora! #PlanTurnos</a></li>
 							</ul>
@@ -91,7 +91,7 @@
 							<header>
 								<h3>Tienda</h3>
 							</header>
-							<p>Sitio web donde publicas los articulos / servicios que vendes en tu negocio , el mismo esta vinculado a pagos por Mercadopago/Tarjetas de credito.</p>
+							<p>Sitio web donde publicas los articulos/servicios que vendes en tu negocio , el mismo esta vinculado a medios de pagos por ejemplo Mercadopago/Tarjetas de credito, los clientes tendran acceso a tu stock en cualquier momento y estaras vendiendo las 24hs</p>
 							<ul class="actions">
 								<li><a href="#footer" id="btnTienda" class="button alt">Obtenerlo ahora! #PlanTienda</a></li>
 							</ul>
@@ -117,12 +117,12 @@
 						</div>
 						<div class="field">
 							<label for="message">Mensaje</label>
-							<textarea name="message" id="message" rows="6"></textarea>
+							<textarea name="message" placeholder="Comentame sobre tu proyecto." id="message" rows="6"></textarea>
 						</div>
 						<ul class="actions">
 							<li><input type="submit" value="Enviar" class="alt" /></li>
 							<div class="mdl-spinner mdl-js-spinner is-active"></div>
-               				 <span class="success-help">Gracias nos pondremos en contacto en la brevedad!</span>
+               				 <span class="success-help">Gracias nos pondremos en contacto a la brevedad!</span>
 						</ul>
 					</form>
 					<div class="copyright">
