--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</header>
 							<p>Pagina de aterrizaje, Identidad de marca, Marketing, se denomina página de aterrizaje a una página web a la que una persona llega tras pulsar un enlace, estos clienten van a descubrir tu sitio web personalizado y puedan encontrar la esencia de la marca.</p>
 							<ul class="actions">
-								<li><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=185831875-a337bd3f-e5e1-4c9f-bf0c-9118bf72ea5f" id="btnAterrizaje" class="button alt">Obtenerlo ahora! #PlanAterrizaje</a></li>
+								<li><a href="#footer" id="btnAterrizaje" class="button alt">Obtenerlo ahora! #PlanAterrizaje</a></li>
 							</ul>
 						</div>
 					</article>
@@ -81,7 +81,7 @@
 							</header>
 							<p>Sitio web, donde los clientes puedan gestionar turnos, los mismos estaran vinculados con tu agenda en google calendar, te ayuda en la gestion y respuesta inmediata a tus clientes.</p>
 							<ul class="actions">
-								<li><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=185831875-a6f91a38-f2f6-4508-8b14-666759cea206" id="btnTurnos" class="button alt">Obtenerlo ahora! #PlanTurnos</a></li>
+								<li><a href="#footer" id="btnTurnos" class="button alt">Obtenerlo ahora! #PlanTurnos</a></li>
 							</ul>
 						</div>
 					</article>
@@ -93,7 +93,7 @@
 							</header>
 							<p>Sitio web donde publicas los articulos/servicios que vendes en tu negocio , el mismo esta vinculado a medios de pagos por ejemplo Mercadopago/Tarjetas de credito, los clientes tendran acceso a tu stock en cualquier momento y estaras vendiendo las 24hs</p>
 							<ul class="actions">
-								<li><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=185831875-8777780b-66aa-40c7-be0e-b6f58870e7a6" id="btnTienda" class="button alt">Obtenerlo ahora! #PlanTienda</a></li>
+								<li><a href="#footer" id="btnTienda" class="button alt">Obtenerlo ahora! #PlanTienda</a></li>
 							</ul>
 						</div>
 					</article>
